--- a/_posts/2023-08-05-Post8(CSPart1_2).md.md
+++ b/_posts/2023-08-05-Post8(CSPart1_2).md.md
@@ -4,7 +4,7 @@ title: "[CS] 비선형 자료 구조 편"
 author: "Dev.Paul"
 categories: Computer Science
 tags: [Develop, Developer, Studet, CS, Computer-Science, Interview, Study, Data-Structure]
-image: cs.png
+image: CS.png
 ---
 
 <br>
