--- a/_posts/2023-08-05-Post8(CSPart1_2).md.md
+++ b/_posts/2023-08-05-Post8(CSPart1_2).md.md
@@ -1,9 +1,17 @@
 ---
 layout: post
 title: "[CS] 비선형 자료 구조 편"
-author: "Dev.Paul"
+author: Dev.Paul
 categories: Computer Science
-tags: [Develop, Developer, Studet, CS, Computer-Science, Interview, Study, Data-Structure]
+tags:
+  - Develop
+  - Developer
+  - Studet
+  - CS
+  - Computer-Science
+  - Interview
+  - Study
+  - Data-Structure
 image: CS.png
 ---
 
