--- a/_posts/2023-08-05-Post8(CSPart1_2).md
+++ b/_posts/2023-08-05-Post8(CSPart1_2).md
@@ -25,7 +25,7 @@ image: CS.png
 
 이번 포스팅에서는 비선형 자료 구조에 대해서 알아본다.
 <br><br>
-선형 자료 구조에 대해서는 [포스팅](https://iiibreakeriii.github.io/posts/Post7(CSPart1_1).md/){: _blank}을 확인하면 된다.
+선형 자료 구조에 대해서는 [포스팅](https://iiibreakeriii.github.io/Post7(CSPart1_1)/){: _blank}을 확인하면 된다.
 <br><br>
 **비선형 자료 구조(Nonlinear Data Structure)**의 의미는 다음과 같다.
 <br>
