--- a/_posts/2023-08-27-Post11(CSPart2_2).md
+++ b/_posts/2023-08-27-Post11(CSPart2_2).md
@@ -29,7 +29,7 @@ image: Algorithm.png
 <br><br>
 
 <p style="text-align: center" >
-	<a  href="https://iiibreakeriii.github.io/posts/Post10(CSPart2_1)" target="_blank"> --- 탐색 알고리즘 --- </a>
+	<a  href="https://iiibreakeriii.github.io/Post10(CSPart2_1)" target="_blank"> --- 탐색 알고리즘 --- </a>
 </p>
 
 <br>
