--- a/_posts/2023-09-11-Post12(CSPart2_3).md
+++ b/_posts/2023-09-11-Post12(CSPart2_3).md
@@ -29,11 +29,11 @@ image: Algorithm.png
 <br><br>
 
 <p style="text-align: center" >
-	<a  href="https://iiibreakeriii.github.io/posts/Post10(CSPart2_1)" target="_blank"> --- 탐색 알고리즘 --- </a>
+	<a  href="https://iiibreakeriii.github.io/Post10(CSPart2_1)" target="_blank"> --- 탐색 알고리즘 --- </a>
 </p>
 
 <p style="text-align: center" >
-	<a  href="https://iiibreakeriii.github.io/posts/Post11(CSPart2_2)" target="_blank"> --- 정렬 알고리즘 안정성 --- </a>
+	<a  href="https://iiibreakeriii.github.io/Post11(CSPart2_2)" target="_blank"> --- 정렬 알고리즘 안정성 --- </a>
 </p>
 
 <br>
